--- a/simple-next/package.json
+++ b/simple-next/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoos": "^0.0.1-security",
-    "next": "14.2.6",
+    "next": "^14.2.6",
     "react": "^18",
     "react-dom": "^18"
   },
